# sigmaepsilon.core

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  poetry.toml  poetry_export.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_pytest_cov.bat  run_pytest_cov.sh  run_tests.sh  setup.py  tox.ini
.circleci/: config.yml
docs/: requirements.txt
docs/source/: api.rst  api_tools.rst  conf.py  index.rst  user_guide.md  user_guide.rst
docs/source/api/: api_cp.rst  api_formatting.rst  api_infix.rst  api_meta.rst  api_wrapping.rst
docs/source/notebooks/: notebook1.ipynb
src/sigmaepsilon/core/: __init__.py  abstract.py  acp.py  alphabet.py  colors.py  config.py  cp.py  decorate.py  downloads.py  exceptions.py  formatting.py  infix.py  io.py  kwargtools.py  meta.py  misc.py  osutils.py  testing.py  thirdparty.py  typing.py  warning.py  wrapping.py
src/sigmaepsilon/core/tools/: tools.py
tests/: test_attr.py  test_colors.py  test_config.py  test_infix.py  test_meta.py  test_misc.py  test_property.py  test_tools.py  test_utils.py
