[build-system]
requires = [
    "setuptools>=65.5.1",
    "setuptools-scm",
    "wheel>=0.38.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "sigmaepsilon.core"
version = "1.0.1"
description = "Common developer utilities for Python projects."
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "SigmaEpsilon", email = "bencebalogh@sigmaepsilon.com" }
]
maintainers = [
    { name = "SigmaEpsilon", email = "bencebalogh@sigmaepsilon.com" }
]
license = { file = "LICENSE" }
keywords = [
    "engineering", "mechanics", "science", "numerical analysis", 
    "finite element method", "solid mechanics", "optimization"
]
requires-python = ">=3.7, <3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.test = { file = ["requirements-test.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }
optional-dependencies.docs = { file = ["docs/requirements.txt"] }

[project.urls]
Homepage = "https://github.com/sigma-epsilon/sigmaepsilon.core"
