[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigmaepsilon.core"
version = "1.2.0"
description = "Common developer utilities for Python projects."
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3 :: Only",
        "Operating System :: OS Independent",
]
readme = "README.md"
authors = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
maintainers = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
license = "MIT"
keywords = [
    "engineering", "mathematics", "optimization", "vector", "tensor",
    "vector algebra", "tensor algebra", "symbolic mathematics",
    "nonlinear optimization"
]
homepage = "https://github.com/sigma-epsilon/sigmaepsilon.core"
repository = "https://github.com/sigma-epsilon/sigmaepsilon.core"
documentation = "https://sigmaepsiloncore.readthedocs.io/en/latest/?badge=latest"
packages = [{ include = "sigmaepsilon", from = "src" }]

[tool.poetry.dependencies]
appdirs
six
toml

[tool.poetry.group.dev.dependencies]
python = ">=3.10"
ipykernel = "^6.29.2"
black = "^24.2.0"
ipython = "^8.21.0"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
coverage = "^7.4.1"
numpy

[tool.poetry.group.docs.dependencies]
black 
flake8 
ipykernel 
numpy
tornado >= "6.3.3" # not directly required, pinned by Snyk to avoid a vulnerability
