[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigmaepsilon.core"
version = "1.2.2"
description = "Common developer utilities for Python projects."
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3 :: Only",
        "Operating System :: OS Independent",
]
readme = "README.md"
authors = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
maintainers = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
license = "MIT"
homepage = "https://github.com/sigma-epsilon/sigmaepsilon.core"
repository = "https://github.com/sigma-epsilon/sigmaepsilon.core"
documentation = "https://sigmaepsiloncore.readthedocs.io/en/latest/?badge=latest"
packages = [{ include = "sigmaepsilon", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
appdirs = "*"
six = "*"
toml = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
ipykernel = "^6.29.2"
numpy = "^1.26.4"
tornado = ">=6.3.3"
poetry-plugin-export = "^1.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"
numpy = "^1.26.4"
flake8 = "^7.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
ipython = "^8.21.0"
myst-parser = "^2.0.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinx-inline-tabs = "^2023.4.21"
pydata-sphinx-theme = "^0.15.2"
numpy = "^1.26.4"
